--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
 	        Trustworthy and Secure Software (TSS)</a>. He is also Senior Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
 		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
 		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI agents for coding.
-		<br><br>
-		Abhik received his PhD in Computer Science 
+		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		His research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
-		the team has made contributions to automated program repair for automatic programming, as well as to 
-		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
+		<br><br>
+		Abhik's group at NUS is known for core research in symbolic program analysis. The group has also studied 
+		applications of program analysis to areas such as computer security, agentic AI or cyber-physical systems. 
+		These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
+		(Test-of-time award) for (symbolic analysis based) program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
 		contributions to symbolic execution. 
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. 
