--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
 		<br><br>
-		Abhik's group at NUS is known for core research in symbolic program analysis. The group has also studied 
+		Abhik's group at NUS has focused on symbolic program analysis, along with 
 		applications of program analysis to areas such as computer security, agentic AI or cyber-physical systems. 
 		These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
