--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<li><font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
 	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/">NUS</a>, 
-		from <a href ="https://sigsoft.medium.com/interview-with-the-new-acm-tosem-eic-prof-abhik-roychoudhury-3ffc7bea80c2">TOSEM journal</a>,
+		from <a href ="https://sigsoft.medium.com/interview-with-the-new-acm-tosem-eic-prof-abhik-roychoudhury-3ffc7bea80c2">TOSEM</a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
 		<li><font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> 
