--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
-	<li><font face="Arial"><a href="https://spartan-nus.github.io/">SPARTAN effort in Trusted Agents @ NUS</a></font></li>
+	<li><font face="Arial"><a href="https://spartan-nus.github.io/">[SPARTAN effort in Trusted Agents @ NUS]</a></font></li>
 	<li><font face="Arial">
 	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
