--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	&nbsp;<a href="https://nus-tss.github.io/">[TSS Group]</a> &nbsp;
-		<a href="https://spartan-nus.github.io/">[SPARTAN Effort]</a> &nbsp;
-		<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">[Google Scholar]</a>&nbsp;
-	 <a href="papers.html">[PAPERS]</a>&nbsp;
-	 <a href="service.html">[SERVICE]</a>&nbsp;
-		<a href="teaching.html">[TEACHING]</a>&nbsp;
+	[<a href="https://nus-tss.github.io/">TSS Group</a>]
+		[<a href="https://spartan-nus.github.io/">SPARTAN Effort</a>]
+		[<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">Google Scholar</a>]
+	 [<a href="papers.html">PAPERS</a>]
+	 [<a href="service.html">SERVICE</a>]
+         [a href="teaching.html">TEACHING</a>]
 	</font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
