--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <ul> 
 <li>
 	<p><font face="Arial">
-Plenary Speech at InnovFest Suzhou on Agentic AI for Software, October 2025</p>
+Plenary Speech at InnovFest Suzhou on Agentic AI for Software, Oct 2025.</p>
 
 <iframe src="https://www.slideshare.net/slideshow/embed_code/key/oicjSgmdFLAo8Y?hostedIn=slideshare&page=upload" 
 	width="500" height="420" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
@@ -346,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
