--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>. He is Senior Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
-		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
-		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI agents for coding.
+	        Trustworthy and Secure Software (TSS)</a>. 
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
@@ -133,7 +131,8 @@
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
 		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
-		contributions to symbolic execution. 
+		contributions to symbolic execution. The work on program repair has been carried forward in the form of AI agents for code, which led the 
+		acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by <a href="https://www.sonarsource.com/">SonarSource</a>.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
@@ -338,6 +337,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
